apps/apps-ops/authentik/extras/tls/ingress-auth-pub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-oauth-public
spec:
  ingressClassName: ingress-public
  rules:
    - host: auth.wheezy.fr
      http:
        paths:
          - path: /application/o/authorize/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /application/o/token/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /application/o/userinfo/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /source/oauth/callback/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /application/o/.well-known/
            pathType: ImplementationSpecific
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /application/o/jwks/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /application/o/end-session/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
